# android-learn

./: README.md
002-android-wcdb/: settings.gradle
003-android-download/: build.gradle  settings.gradle
004-android-hook-activity/: settings.gradle
005-android-background-deamon/: settings.gradle
006_android_music/: build.gradle  global.gradle  gradle.properties  settings.gradle
006_android_music_arouter/: global.gradle  settings.gradle
006_android_music_replugin/: build.gradle  global.gradle  gradle.properties  maven_push.gradle  settings.gradle
007_android_gradle_plugin/: settings.gradle
007_android_gradle_plugin_buildSrc/: settings.gradle
007_android_gradle_plugin_standalone/: build.gradle  gradle.properties  settings.gradle
007_android_gradle_plugin_transformClassesWithDexBuilderFor/: build.gradle  settings.gradle
008_android_ams/: build.gradle  settings.gradle
009_android_okhttp_core/: settings.gradle
010_android_jni_ffmpeg/: settings.gradle
010_android_jni_ffmpeg-a/: build.sh  settings.gradle
010_android_jni_ffmpeg-so/: settings.gradle
010_android_jni_ffmpeg-so/app/: CMakeLists.txt  build.gradle
010_android_jni_ffmpeg-so/app/src/main/cpp/: native-lib.cpp
010_android_jni_ffmpeg-so/app/src/main/java/com/learn/cmake/: MainActivity.java
011_android_handler/: handler.vsdx  settings.gradle
012_android_gray/: settings.gradle
013-android-alias/: settings.gradle
013-android-alias -hide/: settings.gradle
014-android-tracker/: settings.gradle
015-android-xcrash/: build.gradle
017-android-thread-handler/: settings.gradle
(+631 files in other folders)
